--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
+		"start": "node server.js",
 		"dev": "nodemon server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -13,6 +14,7 @@
 	"description": "",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"nodemon": "^3.1.10",
 		"openai": "^5.12.2"
